<resources>
    <string name="app_name">FindToFine</string>

    <string name="default_web_client_id">469810681034-uk7r4atmtv0jd7t1u0iu9m8vetdbgr65.apps.googleusercontent.com</string>

    <string name="get_started">Get Started</string>
    <string name="teks_description_welcome_page1">“Simplifies Luggage Management During Vacations”</string>
    <string name="fast_secure_list_item"><![CDATA[Fast & Secure List Item]]></string>
    <string name="can_be_anywhere_at_any_time">Can Be Anywhere At Any Time</string>
    <string name="easy_to_use">Easy To Use</string>
    <string name="back_arrow">‹</string>
    <string name="next_arrow">Next ›</string>
    <string name="welcome_back_to">Welcome Back to</string>
    <string name="enter_your_email_and_password_to_log_in">Enter your email and password to log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="register_account_to">Register Account To</string>
    <string name="create_an_account_to_continue">Create an account to continue!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="title_activity_forgot_pw">ForgotPwActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="continue_next">Continue</string>
    <string name="select_which_contact_detail_should_we_use_to_reset_your_password">Select which contact detail should we use to reset your password</string>
    <string name="choose_one">Choose One</string>
    <string name="phone_number">Phone Number</string>
    <string name="input_here">Input Here</string>
    <string name="_00_45">00:45</string>
    <string name="resend">Resend</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="we_have_sent_the_code_verification_to_your_mobile_number_or_email">We have sent the code verification to your mobile number or email</string>
    <string name="verify">Verify</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="update_password">Update Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="congratulations">Congratulations</string>
    <string name="your_account_is_ready_to_use">Your account is ready to use</string>
    <string name="let_s_travel">Let\'s Travel</string>
    <string name="add">add</string>
    <string name="home">home</string>
    <string name="history">history</string>
    <string name="guide">guide</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_Pgede">Profile</string>
    <string name="more">More</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="examplename">examplename</string>
    <string name="update_profile">Update Profile</string>
    <string name="welcome_to">Welcome To</string>
    <string name="subtitle_welcome">FindToFine is your ultimate travel companion designed to simplify luggage management and enhance your vacation planning experience. We understand that organizing your belongings for a trip can be stressful and time-consuming. That\'s why we\'ve developed FindToFine, a mobile application that streamlines the process of cataloging your holiday luggage with ease and efficiency.</string>
    <string name="title_activity_detail_history">DetailHistoryActivity</string>
    <string name="subtittle_what_does">FindToFine allows you to create a comprehensive list of your travel items simply by taking photos of them. No more manual itemization or worrying about forgetting essential items. Our app leverages advanced Machine Learning and Image Recognition technologies to automatically identify and list your belongings, ensuring that nothing gets overlooked.</string>
    <string name="subtittleWhyChoose">Efficiency, Save time and reduce stress by automating the packing list creation process.
        Security, Ensure the safety of your belongings with a reliable and accessible inventory system.
        Convenience, Plan your vacations better with an app that understands and adapts to your needs.
        Variety, Customize your packing experience with diverse options tailored to different types of trips.
        Accuracy, Rest assured that your inventory is precise and up-to-date, minimizing the risk of missing items.
        Accessibility, Access your packing lists anytime, anywhere, whether you\'re online or offline, for ultimate convenience.
        Organization, Keep track of your belongings effortlessly with categorized lists and intuitive search functionalities.</string>
    <string name="subtittle_start">Embrace a hassle-free travel experience with FindToFine. Our app is designed to bring peace of mind, allowing you to focus on making memories rather than worrying about your luggage. Trust FindToFine to keep your belongings organized, secure, and easily accessible. Download FindToFine today and transform the way you plan and manage your trips. Happy travels!</string>
    <string name="guide_sub1">Welcome to FindToFine! We are committed to protecting your privacy and ensuring the security of your personal information. This Privacy Policy explains how we collect, use, and safeguard your data when you use our mobile application.</string>
    <string name="title_activity_checked_items">CheckedItemsActivity</string>
    <string name="availability">Availability</string>
</resources>